<resources>
    <string name="app_name">MealSuggestionApp</string>
    <string name="get_meal_suggestion">Get Meal Suggestion</string>
    <string name="your_meal_will_appear_here">Your meal will appear here</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_time_morning_mid_morning_afternoon_dinner">Enter time (Morning, Mid-morning, Afternoon, Dinner)</string>
    <string name="meal_suggestor">Meal Suggestor</string>
    <string name="reset">Reset</string>
</resources>