<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/img">


    <TextView
        android:id="@+id/MealSuggestor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meal_suggestor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingBottom="19dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_time_morning_mid_morning_afternoon_dinner"
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_your_name"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/GetMealSuggestionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/get_meal_suggestion"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/MealAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_meal_will_appear_here"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textStyle="bold"
        android:textSize="18sp"/>
</LinearLayout>